--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -224,10 +224,13 @@
         {
           "Title": "Additional Partners",
           "Members": [
-            "Microbial Omics Core (MOC), Broad Institute",
             "Clinical Research Sequencing Platform (CRSP), Broad Institute",
-            "Mascon Medical",
             "GBF",
+            "Joel Ceide, Translator",
+            "Language Scientific",
+            "Mascon Medical",
+            "Microbial Omics Core (MOC), Broad Institute",
+            "Nadya Lopez Zalba, Translator",
             "UPS"
           ]
         }
