Add new teammate

--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -204,6 +204,7 @@
             "Pavel Sidorenko, Ingeniero en Software",
             "Pegah Taheri, Ingeniera en Software",
             "Sampath Settipalli, Ingeniero Superior en Software",
+            "Scott Sassone, Gerente de Producción de Video",
             "Simone Maiwald, Gerente de Ingeniería en Software",
             "Yufeng Wang, Ingeniero Principal en Software"
           ]
@@ -212,6 +213,7 @@
           "Title": "Equipo Clínico, Brigham and Women’s Hospital",
           "Members": [
             "Andy Kim, BS, Coordinador de Investigación",
+            "Christina Kelly, Asistente de Investigación",
             "Hannah Laibinis, Pasante",
             "Henry Manigat, Traductor",
             "Henry Rutherford, BA, Coordinador de Investigación",
