--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -204,6 +204,7 @@
             "Pavel Sidorenko, Enjenyè lojisyèl",
             "Pegah Taheri, Enjenyè lojisyèl",
             "Sampath Settipalli, Granmoun aje enjenyè lojisyèl",
+            "Scott Sassone, Manadjè, Pwodiksyon Videyo",
             "Simone Maiwald, Manadjè Jeni lojisyèl",
             "Yufeng Wang, Granmoun aje enjenyè lojisyèl  "
           ]
@@ -212,6 +213,7 @@
           "Title": "Ekip nan klinik, Brigham and Women’s Hospital",
           "Members": [
             "Andy Kim, BS, Koòdonatè Rechèch",
+            "Christina Kelly, Asistan Rechèch",
             "Hannah Laibinis, Entèn",
             "Henry Manigat, Tradiktè",
             "Henry Rutherford, BA, Koòdonatè Rechèch",
