--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -204,6 +204,7 @@
             "Pavel Sidorenko, Software Engineer",
             "Pegah Taheri, Software Engineer",
             "Sampath Settipalli, Senior Software Engineer",
+            "Scott Sassone, Manager, Video Production",
             "Simone Maiwald, Software Engineering Manager",
             "Yufeng Wang, Senior Software Engineer"
           ]
@@ -212,6 +213,7 @@
           "Title": "Clinical Team, Brigham and Women’s Hospital",
           "Members": [
             "Andy Kim, BS, Research Coordinator",
+            "Christina Kelly, Research Assistant",
             "Hannah Laibinis, Intern",
             "Henry Manigat, Translator",
             "Henry Rutherford, BA, Research Coordinator",
