Add missing translate

--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -206,7 +206,7 @@
             "Sampath Settipalli, Ingeniero Superior en Software",
             "Scott Sassone, Gerente de Producción de Video",
             "Simone Maiwald, Gerente de Ingeniería en Software",
-            "Yufeng Wang, Ingeniero Principal en Software"
+            "Yufeng Wang, Ingeniero Superior en Software"
           ]
         },
         {
