--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -329,7 +329,7 @@
     "Collect": {
       "Title": "Kouman kolekte echantiyon ou yo",
       "Text": "Li enpòtan pou pran tès ou a epi voye li tounen nan menm jou a, Lendi oswa jiska Jedi. Sa yo se jou yo ki Enstiti a Broad pral trete echantiyon TestBoston.",
-      "Link": "[HT] Sample Collection Instructions",
+      "Link": "Enstriksyon Koleksyon Echantiyon",
       "IconAlt": "[HT] PDF file icon",
       "IframeTitle": "[HT] Nasal swab kit directions",
       "Video": "https://player.vimeo.com/video/440526812"
